--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Box2D==2.3.2
 Box2D-kengz==2.3.3
 gym==0.17.1
 matplotlib==3.2.1
-numpy==1.18.2
+numpy~=1.18.1
 pyglet==1.5.3
 pynput==1.6.8
+PyAutoGUI~=0.9.50
